# android-hpe

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
dlib/: CMakeLists.txt  build.gradle
dlib/src/main/java/com/beraldo/hpe/dlib/: HeadPoseDetector.java
